{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 80,
  "lineage": "05fef131-4261-599d-1fc8-54f4982a8d7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lconf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:security-group/sg-03acf0ceb5756caf3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03acf0ceb5756caf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cfc291ba5e38296"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210402162955815300000002",
            "name_prefix": "terraform-",
            "owner_id": "021510583954",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:021510583954:loadbalancer/app/my-alb/f7067cf898f15bea",
            "arn_suffix": "app/my-alb/f7067cf898f15bea",
            "dns_name": "my-alb-789513188.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:021510583954:loadbalancer/app/my-alb/f7067cf898f15bea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-03cfc291ba5e38296"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a9f7df12365aaff"
              },
              {
                "subnet_id": "subnet-0dfbcd63e976d6753"
              }
            ],
            "subnets": [
              "subnet-05a9f7df12365aaff",
              "subnet-0dfbcd63e976d6753"
            ],
            "tags": {
              "Name": "my-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:021510583954:listener/app/my-alb/f7067cf898f15bea/7f4146e979079a7c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:021510583954:targetgroup/dev-20210402163208498600000003/1a8a70a9e7442ad0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:021510583954:listener/app/my-alb/f7067cf898f15bea/7f4146e979079a7c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:021510583954:loadbalancer/app/my-alb/f7067cf898f15bea",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_alb.aws_lb.this",
            "module.my_alb.aws_lb_target_group.main",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.my_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:021510583954:targetgroup/dev-20210402163208498600000003/1a8a70a9e7442ad0",
            "arn_suffix": "targetgroup/dev-20210402163208498600000003/1a8a70a9e7442ad0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:021510583954:targetgroup/dev-20210402163208498600000003/1a8a70a9e7442ad0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev-20210402163208498600000003",
            "name_prefix": "dev-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "InstanceTargetGroupTag": "dev_server",
              "Name": "dev-"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "dependencies": [
            "module.my_alb.aws_lb.this",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:internet-gateway/igw-0db451887e523d0df",
            "id": "igw-0db451887e523d0df",
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-igw"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0db451887e523d0df",
            "id": "r-rtb-0454504e0fae57e531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0454504e0fae57e53",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:route-table/rtb-07850b5af1a712b93",
            "id": "rtb-07850b5af1a712b93",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra-2-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:route-table/rtb-0454504e0fae57e53",
            "id": "rtb-0454504e0fae57e53",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db451887e523d0df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-2-vpc-public"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0657a6f0d78ada98f",
            "route_table_id": "rtb-07850b5af1a712b93",
            "subnet_id": "subnet-021eacc8d529659ba"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1c0689e77168e4a",
            "route_table_id": "rtb-0454504e0fae57e53",
            "subnet_id": "subnet-0dfbcd63e976d6753"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fa4c5a9ebbeb2e2",
            "route_table_id": "rtb-0454504e0fae57e53",
            "subnet_id": "subnet-05a9f7df12365aaff"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-021eacc8d529659ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-021eacc8d529659ba",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-private-subnet-a"
            },
            "tags_all": {
              "Name": "terra-2-private-subnet-a"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-0dfbcd63e976d6753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-0dfbcd63e976d6753",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-public-subnet-a"
            },
            "tags_all": {
              "Name": "terra-2-public-subnet-a"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-05a9f7df12365aaff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-05a9f7df12365aaff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-public-subnet-a"
            },
            "tags_all": {
              "Name": "terra-2-public-subnet-a"
            },
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:vpc/vpc-0990eacb7e9c3de7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f6e79ec4ea72370",
            "default_route_table_id": "rtb-0e7915c4825cbe7de",
            "default_security_group_id": "sg-07646a4945445efac",
            "dhcp_options_id": "dopt-4d630226",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0990eacb7e9c3de7f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7915c4825cbe7de",
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-vpc"
            },
            "tags_all": {
              "Name": "terra-2-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:security-group/sg-03cfc291ba5e38296",
            "description": "Security group for web_server and ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cfc291ba5e38296",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_alb-20210402162954674800000001",
            "name_prefix": "sg_alb-",
            "owner_id": "021510583954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0990eacb7e9c3de7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1567941733",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03cfc291ba5e38296",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1835219665",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cfc291ba5e38296",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1599800628",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cfc291ba5e38296",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3922811009",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cfc291ba5e38296",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-237242739",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cfc291ba5e38296",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.sg_alb.aws_security_group.this",
            "module.sg_alb.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}